#![feature(mutex_unlock)]

[package]
name = "lifx-api-server"
description = "A library/server that mimicks the official LIFX API using the local LAN protocol."
version = "0.1.15"
edition = "2018"
authors = ["Caleb Mitchell Smith-Woolrich <calebsmithwoolrich@gmail.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/lifx-api-server"
repository = "https://github.com/PixelCoda/lifx-api-server"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lifx-rs = { git = "https://github.com/PixelCoda/lifx-rs.git", version = "0.1.30" }
failure = "0.1.8"
palette = "0.2.1"
rand = "0.8.4"
get_if_addrs = "0.5.3"
serde_json = "1.0.96"
serde_derive = "1.0.130"
rouille = "3.6.2"
colors-transform = "0.2.11"
sudo = "0.6.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]